fix ios z-index issue

--- a/style.css
+++ b/style.css
@@ -15,12 +15,15 @@
     position: sticky;
     top: 0;
   }
+  .second {
+    z-index: 2;
+  }
   .first:before,
   .second:before {
-    content: '',
     position: absolute;
     width: 100%;
     height: 100%;   
+    content: '',
   }
   .first .aspect-ratio-holder {
     padding-bottom: 108.21256%;
